Added ability to load and save data

--- a/config.ini
+++ b/config.ini
@@ -33,7 +33,7 @@ additional_trajectory_line_outline = 3
 [VISUAL_TOGGLES]
 
 display_multiple_trajectories_vertical = true
-display_multiple_trajectories_horizontal = true
+display_multiple_trajectories_horizontal = false
 
 display_bases = true
 
