Adding hitbox and screen toggles

--- a/config.ini
+++ b/config.ini
@@ -35,7 +35,24 @@ additional_trajectory_line_outline = 3
 display_multiple_trajectories_vertical = true
 display_multiple_trajectories_horizontal = false
 
+# horizontal view
 display_bases = true
+
+# plate view
+display_strike_zone = true
+display_ball_hitbox = true
+display_ground = true
+display_bat_hitbox = true
+display_player_hitbox = true
+
+# Can be top, mid, middle, bottom, or None to turn off
+plate_screen = top
+horizontal_path_screen = top
+vertical_path_screen = mid
+text_screen = bottom
+
+strike_view_scale = 0.2
+
 
 [TEXT_TOGGLES]
 # game state
@@ -44,6 +61,11 @@ display_count_text = true
 display_runners_text = true
 display_pitcher_text = true
 display_batter_text = true
+display_score_text = true
+display_star_count_text = true
+
+display_home_name = Home
+display_away_name = Away
 
 # strike / ball
 display_ball_coordinate_text = true
