Lots of new changes
Added Calibration mode for pre-vis
Added fade in
Strike View now conforms to game camera
Lots of behind the scenes changes to make things easier

--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,9 @@ ball_trajectory_outline = black
 
 # cross section colors
 ball = blue
+player_movement_box = red
 player_hitbox = magenta
-bat_hitbox = cyan
+bat_hitbox = brown
 player_position = white
 strike_zone = red
 ground = red
@@ -23,6 +24,8 @@ x_dimension = 400
 y_dimension = 1000
 
 font = freesansbold.ttf
+
+hitbox_line_width = 2
 
 line_width = 5
 bold_line_width = 7
@@ -41,9 +44,11 @@ display_bases = true
 # plate view
 display_strike_zone = true
 display_ball_hitbox = true
-display_ground = true
 display_bat_hitbox = true
 display_player_hitbox = true
+display_player_movement = true
+ball_radius = 0.05
+edge_of_ball_counts_as_strike = false
 
 # Can be top, mid, middle, bottom, or None to turn off
 plate_screen = top
@@ -51,8 +56,15 @@ horizontal_path_screen = top
 vertical_path_screen = mid
 text_screen = bottom
 
-strike_view_scale = 0.2
+# delay says how long it takes to start fading in
+horizontal_fade_delay = 0.0
+vertical_fade_delay = 0.0
+strike_fade_delay = 0.0
 
+# timer says how long it takes to fully appear
+horizontal_fade_in_timer = 1.0
+vertical_fade_in_timer = 1.0
+strike_fade_in_timer = 1.0
 
 [TEXT_TOGGLES]
 # game state
@@ -75,6 +87,7 @@ display_strike_zone_text = true
 display_pitch_type_text = true
 display_if_swung_text = true
 display_batting_result_ball_strike_hbp = true
+display_distance_from_bat = true
 
 # hit
 display_hit_charge_bunt_text = true
@@ -90,8 +103,13 @@ display_char_contact_power_text = true
 display_char_field_traj_bonus_text = true
 display_if_star_hit = true
 display_selected_vertical_range_text = true
+
+# most helpful in debugging
 display_rng_text = false
 
 [USAGE]
+is_starred = false
+calibration = false
+
+# used for trainer, shouldn't be turned on for spectating or online, will desync if used
 allow_forced_rehits = false
-is_starred = true
